# OpenQA

./: .gitignore  Cargo.toml  README.md
frontend-dashboard/: index.html  package-lock.json  package.json  postcss.config.js
frontend-dashboard/src/: App.tsx  index.css
frontend-dashboard/src/components/: AIModelsView.tsx  CloudAnalyticsView.tsx  ClustersView.tsx  DeviceFarmView.tsx  DocsView.tsx  Header.tsx  MarkdownParser.tsx  OverviewView.tsx  SettingsView.tsx  Sidebar.tsx  TestSuitesView.tsx  WebDriversView.tsx
src/: main.rs
workers/: requirements.txt  run_android_test.py  run_web_test.py  worker.py
