[package]
name = "rust-python-hybrid"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
redis = { version = "0.24", features = ["tokio-comp"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
